--- a/admin/manifest.json
+++ b/admin/manifest.json
@@ -2,23 +2,35 @@
   "name": "Anuranan Admin Panel",
   "short_name": "Anuranan Admin",
   "description": "Admin panel for Anuranan Recitation Training Institute",
-  "start_url": "/admin/",
+  "start_url": "/admin/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1B4B8F",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
-      "src": "public/admin-icon-192.png",
+      "src": "public/admin-logo-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "public/admin-icon-512.png",
+      "src": "public/admin-logo-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "public/admin-logo-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "public/admin-logo-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["education", "productivity"],
