Cache bust v202511120010 - Mobile optimization

--- a/website/manifest.json
+++ b/website/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1B4B8F",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
       "src": "/public/icon-192.png",
